# clawcodex

./: .gitignore  CHANGELOG.md  CHANGELOG.md.raw  CONTRIBUTING.md  FEATURE_LIST.md  FEATURE_LIST.md.raw  MANIFEST.in  README-v1.md  README.md  README.md.raw  ROADMAP.md  TODOS.md  fix_repl_help.py  install.sh  pyproject.toml  requirements.dev.txt  requirements.txt  test_gitcode_workflow.md  upstream-sync.yaml  workflow.md
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  test-results.yml  upstream-detect.yml
claude-code-wiki/: wiki-guide.md
claude-code-wiki/.obsidian/: graph.json  workspace.json
claude-code-wiki/wiki/: index.md  log.md
clawcodex_ext/: __init__.py
clawcodex_ext/agent/: __init__.py  _outlines_adapter.py  background_runner.py  background_state.py  session_ext.py
clawcodex_ext/auth/: codex_oauth.py
clawcodex_ext/capabilities/: __init__.py
clawcodex_ext/cli/: __init__.py  dispatch.py  main.py  parser.py  permissions.py  runners.py  runtime_commands.py  subcommand_registry.py
clawcodex_ext/command_system/: __init__.py  builtins.py  engine.py  input_processing.py  skills_integration.py  types.py
clawcodex_ext/context_system/: _gitpython_adapter.py  prompt_assembly.py
clawcodex_ext/cron_system/: __init__.py  jitter.py  lock.py  models.py  notifications.py  parser.py  runs.py  runtime.py  schedule.py  scheduler.py  status.py  tasks.py  tools.py
clawcodex_ext/entrypoints/: headless.py  tui.py
clawcodex_ext/frontend/: __init__.py  headless.py  protocol.py  registry.py  repl.py  repl_extensions.py  tui.py  tui_extensions.py
clawcodex_ext/hooks/: _pluggy_adapter.py
clawcodex_ext/memory/: __init__.py  scope_aware_prompt.py
clawcodex_ext/permissions/: __init__.py  _treesitter_adapter.py  cycle.py
clawcodex_ext/providers/: __init__.py  factory.py  hooks.py  openai_codex_provider.py  runtime.py
clawcodex_ext/repl/: app.py  background_escape.py  core.py  session_browser.py  ui_host.py
clawcodex_ext/runtime/: __init__.py  context.py  observer.py
clawcodex_ext/settings/: __init__.py  pydantic_adapter.py
clawcodex_ext/skills/: _frontmatter_adapter.py
clawcodex_ext/tui/: __init__.py  agent_bridge.py  app.py  commands.py  entrypoint.py  history_store.py  hyperlinks.py  keybindings.py  messages.py  state.py  vim_buffer.py
clawcodex_ext/utils/: cache_warning.py
demos/adopt-me-app/: index.html  package-lock.json  package.json
demos/crm-app/: package-lock.json  package.json
demos/linkedin-app/: index.html  package-lock.json  package.json
demos/minecraft-app/: index.html  package-lock.json  package.json
demos/wc26-intro/: index.html
demos/workflows/: 02-user-prompt-research.js  02-user-prompt-research.py  03-aeo-data-scientist.js  03-aeo-data-scientist.py  04-aeo-content-advisor.js  04-aeo-content-advisor.py  05-article-writer.js  05-article-writer.py
docs/: ARCHITECTURE.md  ARCHIVED_FEATURES.md  ARCHIVED_PROGRESS.md  FEATURE_PLAN.md  FEATURE_PLAN.md.bak  NEWS.md  PROGRESS.md  UPSTREAM_SYNC_DESIGN.md  WORKFLOW-GUIDE.md  WORKFLOW.md  agent-server.md  new-features-guide.md  workflow-commands-and-ultracode-plan.md  workflow-engine-port-plan.md  workflow-engine.md
docs/decisions/: F48-decisions.md  f48-modification-tracking.md
docs/guide/: SETUP_GUIDE.md  TESTING.md
docs/guide.raw/: SETUP_GUIDE.md  TESTING.md
docs/i18n/: README_AR.md  README_FR.md  README_HI.md  README_PT.md  README_RU.md  README_ZH.md
docs/i18n.raw/: README_AR.md  README_FR.md  README_HI.md  README_PT.md  README_RU.md  README_ZH.md
eval/: README.md  _clear_infra_errors.py  _describe_dataset.py  compare_results.py  make_results_chart.py  pick_batch.py  repair_preds.py  run_compare.py
eval/eco/: README.md  capture_corpus.py  measure.py
eval/harbor/: README.md  backfill_trajectories.py  claude_code_subscription.py  clawcodex_agent.py  openclaude_agent.py  time_budget.py
extensions/: __init__.py
extensions/agent/: __init__.py  session_persist.py
extensions/api/: __init__.py  orchestration.py  query.py  query_middleware.py
extensions/capabilities/: PHASE1_SKELETON.txt  __init__.py  adapter_protocol.py  agent_protocol.py  (+5 more)
patches/: 0001-port-to-python.patch  series
scripts/: diagnose_keys.py  regenerate_patches_68dc3c5.py  regenerate_patches_upstream.py  run_skill_smoke.py  try_multiline_input.py  upstream_sync_workflow.py  vendor-openclaude.sh
src/: __init__.py  cli.py  config.py  cost_tracker.py  deferred_init.py  init.py  parity_audit.py  prefetch.py  remote_runtime.py  repl.py  replLauncher.py  secret_store.py  setup.py  task_registry.py  tasks_core.py  token_estimation.py
tests/: conftest.py  manual_e2e_f38.py  test_abort_controller.py  test_abort_controller_once.py  test_advisor_chat_response_roundtrip.py  test_advisor_client_side.py  test_advisor_command.py  test_advisor_helpers.py  test_advisor_orphan_pairing.py  test_advisor_request_wiring.py  test_agent_bubble_propagation.py  test_agent_loop.py  test_agent_loop_compat.py  test_agent_loop_compat_model_error.py  test_agent_loop_dispatch_full.py  test_agent_loop_image_size_propagation.py  test_agent_permission_inheritance.py  test_agent_tool_async.py  test_agent_tool_fork.py  test_agent_toolkit_filtering.py  test_aggregate_budget.py  test_aggregator.py  test_analytics.py  test_anthropic_max_tokens_default.py  test_anthropic_subscription.py  test_anthropic_thinking_keeps_stream_alive.py  test_api_errors.py  test_api_layer_round3.py  test_api_logging.py  test_api_preconnect.py  test_api_retry.py  test_app_state.py  test_app_state_persistence.py  test_app_state_persistence_round3.py  test_architecture_stats.py  test_async_stream_watchdog.py  test_at_file_completer.py  test_at_mention_binary_files.py  test_at_mention_images.py  test_auth.py  (+439 more)
tui_typescript/: README.md
ui-tui/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
upstream_sync/: README.md  UPSTREAM_SYNC_DESIGN.md  __init__.py  cli.py  config.py
(+2766 files in other folders)
